k8s-jenkins-sonar/nexus/nexus.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nexus
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: nexus-server
    spec:
      containers:
        - name: nexus
          image: sonatype/nexus3:latest
          ports:
            - containerPort: 8081
          volumeMounts:
            - name: nexus-data
              mountPath: /nexus-data
      volumes:
        - name: nexus-data
          persistentVolumeClaim:
            claimName: nexusvolume-pvc
