k8s-jenkins-sonar/nexus/nexus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus-service
  annotations:
      prometheus.io/scrape: 'true'
      prometheus.io/path:   /
      prometheus.io/port:   '8081'
spec:
  selector: 
    app: nexus-server
  type: LoadBalancer  
  ports:
    - port: 8081
      targetPort: 8081
      nodePort: 32000
