k8s-jenkins-sonar/nexus/nexus-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nexus-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: nexus
    http:
      paths:
      - path: /
        backend:
          serviceName: nexus-service
          servicePort: 8081
